# kuma

./: .codex-review-passed  .cross-layer-sync.json  .gitattributes  .gitignore  .mcp.json  .npmrc  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOVER-2026-05-12-1040.md  HANDOVER-2026-05-12-1056.md  HANDOVER-2026-05-12-1107.md  HANDOVER-2026-05-12-1109.md  HANDOVER-2026-05-12-1121.md  NOTICE-bundled.md  README.ko.md  README.md  RELEASE_CHECKLIST.md  UPDATE-NOTES.ko.md  UPDATE-NOTES.md  USER-GUIDE.ko.md  USER-GUIDE.md  index.html  mkdocs.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  sitemap.xml  tailwind.config.js  tsconfig.json  tsconfig.scripts.json  vite.config.ts  vitest.config.ts  weekly-ppt.mjs
.claude/: settings.json
.claude/commands/: release.md
.githooks/: pre-push
.github/: copilot-instructions.md  release-footer.md
.github/workflows/: build.yml  ci.yml  docs.yml
.loophaus/: state.json
.loophaus/sessions/: auto-1775609147659.json  auto-1775609536806.json  auto-1775609592009.json  auto-1775609689602.json  auto-1775609763365.json  auto-1775609781796.json  auto-1775635767248.json  auto-1775635775977.json  auto-1775635855753.json  auto-1775636027945.json  auto-1775636228388.json  auto-1775718006696.json  auto-1775718489521.json  auto-1775718499916.json  (+329 more)
2026-06-18-polymerase-tm-method-research/: index.html
2026-07-16-annealing-ta-rules-verified/: index.html
benchmark/: REPORT.md  isps_strategy_comparison.py  plot_benchmark.py  run_proteingym_benchmark.py
docs/: 2026-06-18-polymerase-tm-method-research.md  2026-07-16-annealing-ta-rules-verified.md  README.ko.md  README.md  debug-findings.md  index.md
docs/en/: faq.md  (+29 more)
evolveprimer/: __init__.py  __main__.py  cli.py  codon_table.py  mutation.py  overlap.py  plate_mapper.py  polymerase.py  sdm_engine.py
fixtures/: custom_polymerase.json  dmpR_evolvepro.csv  dmpR_multi_evolve.csv  e2e_scenarios.json  edge_cases.json  egfp.fa  evolvepro_round1_output.csv  evolvepro_round2_output.csv  evolvepro_round3_output.csv  generate_sample_data.py  ispS.fa  ispS_codon_opt.fa  ispS_evolvepro.csv  ispS_multi_evolve.csv  multi_evolve_batch.csv  mutation_list_insilico_test.csv  mutation_primer_requests.json  order_sheet_idt.tsv  pSHCE-dmpR.fa  pSHCE-dmpR.gb  plate_map_96well.json  sample_rpc_requests.jsonl  sample_sequences.json
kuma.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
kuma_core/: AGENTS.md
kuro/: __init__.py  __main__.py  alphafold.py  benchmark.py  cli.py  codon_table.py  esm_embeddings.py  evolvepro.py  index.html  mutation.py  overlap.py  plate_mapper.py  polymerase.py  sdm_engine.py
kuro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mame/: index.html
notes/: TEST-WINDOWS.md  benchling-tm-parameters.md
plans/: evolvepro-checklist-closure.md
python-core/: AGENTS.md  build_sidecar.py  sidecar_main.py  sidecar_main_evolvepro.py  sidecar_main_kuro.py  sidecar_main_mame.py
samples/: sample_evolvepro.csv  sample_plasmid.gb
scripts/: build-notice.mjs  capture-guide.ts  collect-node-licenses.mjs  compute-sidebar-width.mjs  compute-sidebar-width.test.mjs  gen-latest-json.mjs  gen-models.mjs  gen-whatsnew.mjs  gen_mame_seeds_xlsx.py  gen_models_schema.py  generate_kuro_samples.py  i18n-lint.mjs  i18n-parity.mjs  kill-sidecars.mjs  kuma-deps-notify.mjs  mock-data.ts  primer-data.json  record-tutorial.ts  rename-bundle-to-tag.mjs  run-tauri.mjs  safe-install.mjs  sidecar-hash-postbuild.mjs  sidecar-hash.mjs  sync-check-groups.mjs  sync-check.mjs  sync-notify.mjs  sync-version.sh  ui-smoke.mjs  validate_combinatorial_demux.py  verify-implementation.sh  wt-session.sh
search/: search_index.json
src/: AGENTS.md  App.tsx  index.css  main.tsx  test-setup.ts  vite-env.d.ts
src-tauri/: AGENTS.md  Cargo.toml  about.hbs  about.toml  build.rs  sidecar-hashes.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/samples/: ispS_evolvepro.csv  sample_evolvepro.csv  sample_multi_evolve.csv  sample_plasmid.gb
src-tauri/samples/kuro/: README.md
src-tauri/samples/kuro/dmpR_sample_20260519/: echo.csv  echo.xlsx  janus.csv  janus.xlsx  macrogen.xls  platemap.xlsx  primers.fasta  run.json
src-tauri/samples/mame/: 02_mame_barcode_seeds.xlsx  03_mame_expected_mutations.xlsx  04_mame_custom_barcodes.xlsx  05_mame_sample_map.xlsx  06_mame_plate_layout.xlsx  07_mame_activity_long.csv  07_mame_activity_long.xlsx  08_mame_evolvepro_raw.xlsx  09_mame_agilent_rep_batch.xlsx  10_mame_gc_prenormalised.xlsx  egfp_with_flanks.fa  reference.fasta  sample_analysis_result.json
src-tauri/src/: config.rs  keep_awake.rs  lib.rs  main.rs  project.rs  pty_manager.rs  sidecar.rs  sidecar_verify.rs
src-tauri/tests/: config_test.rs  project_test.rs  project_workflow_test.rs  sidecar_test.rs
templates/: 01_kuro_evolvepro_pred.csv  09_mame_agilent_rep_batch.xlsx  10_mame_gc_prenormalised.xlsx  README.md  ~$05_mame_sample_map.xlsx
tests/: AGENTS.md  conftest.py  test_annealing.py  test_annealing_ta_ceiling.py  test_benchmark.py  test_codon_table.py  test_combinatorial_barcode_gene_agnostic.py  test_esm_embeddings.py  test_evolvepro.py  test_evolvepro_adapter_cache.py  test_evolvepro_embedding_cache.py  test_evolvepro_handlers.py  test_evolvepro_others_mode.py  test_evolvepro_run_result.py  test_evolvepro_runner.py  test_evolvepro_sidecar_packaging.py  test_evolvepro_timing.py  test_export_models.py  test_g001_backend.py  test_handler_merge_for_evolvepro.py  test_handlers_export_all.py  test_interface_residues.py  test_kuro_centroid.py  test_kuro_goldengate_engine.py  test_kuro_goldengate_resources.py  test_load_evolvepro_params.py  test_load_sample_data_e2e.py  test_load_sample_data_sidecar_e2e.py  test_macrogen_export.py  test_mame_demux_regression.py  test_mame_step21_resume.py  test_mutation.py  test_overlap.py  test_pareto_esm.py  test_plate_mapper.py  test_polymerase.py  test_preview_evolvepro_source.py  test_ref_seq.py  test_sdm_engine.py  test_sdm_tol_max.py  (+8 more)
troubleshooting/: index.html
(+955 files in other folders)
