[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kuma"
version = "0.8.4"
description = "kuma - integrated primer design (KURO) + NGS verification (mame) tool"
requires-python = ">=3.11"
dependencies = [
    "primer3-py==2.3.0",
    "biopython==1.84",
    "openpyxl==3.1.5",
    "pydantic>=2.0",
    "xlwt==1.3.0",
    "xlrd==1.2.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller==6.16.0",
]

[project.scripts]
kuro = "kuro.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kuro*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "python-core"]
