[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kuma"
version = "0.13.18"
description = "kuma - integrated primer design (KURO) + NGS verification (mame) tool"
requires-python = ">=3.11"
dependencies = [
    "primer3-py==2.3.0",
    "biopython==1.84",
    "openpyxl==3.1.5",
    "xlwt==1.3.0",
    "xlrd==1.2.0",
    "pydantic>=2.0",
    "pandas>=2.0",
    "python-calamine==0.6.2",
    "psutil>=5.9",
    # edlib: C-level edit-distance with HW (infix) mode for barcode matching.
    # Wheels are available for Linux/macOS/Windows on all supported Python
    # versions, so no platform restriction is needed.
    "edlib==1.3.9.post1",
    "certifi>=2024.2.2",
]

[project.optional-dependencies]
build = [
    "pyinstaller==6.16.0",
]
# test: optional tools needed for the full MAME demux regression harness.
# cutadapt is an optional runtime dependency (PATH-based, with a Python
# fallback), so it is not a hard package dep; the test extra pins it so CI
# and other machines can reproduce the native-barcode identity gate.
test = [
    "cutadapt>=5.0",
    "pytest",
]

[project.scripts]
kuro = "kuma_core.kuro.cli:main"
mame = "kuma_core.mame.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kuma_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "python-core"]

[tool.pyright]
extraPaths = [".", "python-core"]
include = ["kuma_core", "python-core", "tests", "scripts"]
exclude = [
    "**/__pycache__",
    "**/.pytest_cache",
    "node_modules",
    "dist",
    "src-tauri/target",
    "python-core/build",
    "python-core/dist",
]
reportMissingImports = "warning"
reportUnusedParameter = "none"

[tool.ruff]
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
