[package]
name = "kuma"
version = "0.01.00"
description = "kuma - KURO + mame integrated primer design & NGS verification app"
edition = "2021"

[lib]
name = "kuma_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
