[package]
name = "kuma"
version = "0.02.03"
description = "kuma - KURO + mame integrated primer design & NGS verification app"
edition = "2021"

[lib]
name = "kuma_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs = "5"
tokio = { version = "1", features = ["sync", "rt", "macros", "io-util", "time"] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
